--- a/style.css
+++ b/style.css
@@ -1,121 +1,202 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
   font-family: 'Poppins', sans-serif;
-  }
-body {
-  background-color: #fff;
+}
+.wrapper{
+  background: #577fbe;
+  position: fixed;
   width: 100%;
 }
-nav {
-  background-color: #577fbe;
+.wrapper nav{
   position: relative;
   display: flex;
-  max-width: 100%;
-  margin: 0% auto;
+  max-width: calc(100% - 60px);
+  margin: 0 auto;
   height: 90px;
   align-items: center;
   justify-content: space-between;
 }
-
-.content {
-  width: 100%;
-}
-nav .content {
+nav .content{
   display: flex;
   align-items: center;
 }
-.dropdown {
-  height: 10vh;
+nav .content .links{
+  margin-left: 80px;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: 4%;
 }
-.dropdown2 {
-  height: 10vh;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%,-50%);
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  right: 0%;
-  margin-right: 4%;
+.logo1{
+  height: auto;
+  width: auto;
+  max-height: 82px;
+  max-width: 350px;
+  filter: invert(95%) sepia(5%) saturate(0%) hue-rotate(52deg) brightness(104%) contrast(107%);
 }
-.pets ul,
-.accounts ul {
-  position:absolute;
-  background: white;
-  margin-top: 10px;
-  width: 80px;
-  height: 100px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
+.content .logo a{
+  color: #fff;
+  font-size: 30px;
+  font-weight: 600;
+}
+.content .links li{
   list-style: none;
-  opacity: 0;
-  pointer-events: none;
-  transform: translateY(-10px);
-  transition: all 0.3s ease;
+  line-height: 70px;
 }
-.pets a,
-.accounts a {
-  color: black;
-  text-decoration: none;
-}
-.pets li,
-.accounts li {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-}
-.pets li:hover,
-.accounts li:hover {
-  background-color: rgb(137, 173, 231);
-  pointer-events: auto;
-}
-.dropdown button,
-.dropdown2 button,
-.navbtns button{
-  background: none;
-  border: none;
-  text-decoration: none;
+.content .links li a,
+.content .links li label{
+  color: #fff;
   font-size: 18px;
   font-weight: 500;
-  cursor: pointer;
   padding: 9px 17px;
   border-radius: 5px;
   transition: all 0.3s ease;
 }
-.dropdown button:hover,
-.dropdown2 button:hover {
-  background: #476daa;
-  transition: all 0.3s ease;
-  color: #fff
+.content .links li label{
+  display: none;
 }
-.navbtns li {
-  background: #fff;
-  transition: all 0.3s ease;
+.content .links li a:hover,
+.content .links li label:hover{
+  background: #456aa5;
 }
-.pets button:focus + ul,
-.accounts button:focus + ul {
+.wrapper input[type="checkbox"]{
+  display: none;
+}
+/* Dropdown menu code start */
+.content .links ul{
+  position: absolute;
+  background: #577fbe;
+  top: 60px;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+}
+.content .links li:hover > ul{
+  top: 70px;
   opacity: 1;
-  pointer-events: all;
-  transform:translateY(0px)
+  visibility: visible;
+  transition: all 0.3s ease;
 }
-.white {
+.content .links ul li a{
+  display: block;
+  width: 100%;
+  line-height: 30px;
+  border-radius: 0px!important;
+}
+.content .links ul ul{
+  position: absolute;
+  top: 0;
+  right: calc(-100% + 8px);
+}
+.content .links ul li{
+  position: relative;
+}
+.content .links ul li:hover ul{
+  top: 0;
+}
+/* Responsive code start */
+@media screen and (max-width: 1250px){
+  .wrapper nav{
+    max-width: 100%;
+    padding: 0 20px;
+  }
+  nav .content .links{
+    margin-left: 30px;
+  }
+  .content .links li a{
+    padding: 8px 13px;
+  }
+}
+@media screen and (max-width: 900px){
+  .wrapper .menu-icon{
+    display: block;
+  }
+  .wrapper #show-menu:checked ~ .menu-icon i::before{
+    content: "\f00d";
+  }
+  nav .content .links{
+    display: block;
+    position: fixed;
+    background: #14181f;
+    height: 100%;
+    width: 100%;
+    top: 70px;
+    left: -100%;
+    margin-left: 0;
+    max-width: 350px;
+    overflow-y: auto;
+    padding-bottom: 100px;
+    transition: all 0.3s ease;
+  }
+  nav #show-menu:checked ~ .content .links{
+    left: 0%;
+  }
+  .content .links li{
+    margin: 15px 20px;
+  }
+  .content .links li a,
+  .content .links li label{
+    line-height: 40px;
+    font-size: 20px;
+    display: block;
+    padding: 8px 18px;
+    cursor: pointer;
+  }
+  .content .links li a.desktop-link{
+    display: none;
+  }
+  /* Dropdown responsive code start */
+  .content .links ul,
+  .content .links ul ul{
+    position: static;
+    opacity: 1;
+    visibility: visible;
+    background: none;
+    max-height: 0px;
+    overflow: hidden;
+  }
+  .content .links #show-features:checked ~ ul,
+  .content .links #show-services:checked ~ ul,
+  .content .links #show-items:checked ~ ul{
+    max-height: 100vh;
+  }
+  .content .links ul li{
+    margin: 7px 20px;
+  }
+  .content .links ul li a{
+    font-size: 18px;
+    line-height: 30px;
+    border-radius: 5px!important;
+  }
+}
+@media screen and (max-width: 400px){
+  .wrapper nav{
+    padding: 0 10px;
+  }
+  .content .logo a{
+    font-size: 27px;
+  }
+}
+/* Shopping cart start*/
+.shopping-cart{
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  transform: translate(-50%,-50%);
   color: white;
+  padding: 4px 4px;
+  font-size:24px;
+}
+.fa-shopping-cart{
+font-size: 24px;
+color:#fff; 
+background-color: #577fbe;
+border: none;
+cursor: pointer;
 }
 /* Search box start*/
-.search-box {
-
+.search-box{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -125,14 +206,14 @@ nav .content {
   border-radius: 40px;
   box-sizing: content-box;
 }
-.search-box:hover> .txt {
+.search-box:hover> .txt{
   width: 300px;
   padding: 0 6px;
 }
-.search-box:hover> .btn {
+.search-box:hover> .btn{
   background: #476daa;
 }
-.btn {
+.btn{
   color: #577fbe;
   float: right;
   width: 40px;
@@ -142,14 +223,14 @@ nav .content {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 0.3s;
+  transition: 0.4s;
   cursor: pointer;
 }
-.btn> i {
+.btn> i{
   font-size: 30px;
   color: #fff;
 }
-.txt {
+.txt{
   border: none;
   background: none;
   outline: none;
@@ -157,43 +238,100 @@ nav .content {
   padding: 0;
   color: #fff;
   font-size: 16px;
-  transition: 0.3s;
+  transition: 0.4s;
   line-height: 40px;
   width: 0px;
   font-weight: bold;
 }
-
-::placeholder {
+::placeholder{
   color: #fff;
 }
-/* Shopping cart start*/
-.shopping-cart{
+/* Login page start */
+#navlog{
   position: absolute;
   top: 50%;
-  right: 0%;
-  margin-right: 4%;
+  right: 2%;
   transform: translate(-50%,-50%);
+  background-color: #476eac;
   color: white;
-  padding: 4px 4px;
-  font-size:24px;
+  padding: 10px 16px;
+  border: none;
+  cursor: pointer;
+  font-size:20px;
 }
-.fa-shopping-cart{
-color:#fff; 
-background-color: #577fbe;
-border: none;
-cursor: pointer;
+#navlog:hover{
+  opacity: 0.8;
 }
-/* Logo start*/
-.logo_img {
-  height: auto;
-  width: auto;
-  max-height: 82px;
-  max-width: 350px;
-  filter: invert(95%) sepia(5%) saturate(0%) hue-rotate(52deg) brightness(104%) contrast(107%);
-  padding-left: 30px;
+/* About Page */
+.middle{
+  padding-top: 100px;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
 }
-.content .logo a {
+.feature_divider {
+  display: block;
+  width: 250px;
+  height: 1px;
+  margin: 25px auto;
+  border: 0 solid #333333;
+  border-top-width: 1px;
+}.align_left .feature_divider {
+   margin-left: 0;
+   margin-right: 0;
+ }
+
+ p{
+   margin: 10px 150px 10px 80px;
+ }
+
+/* cart items */
+.cart-page{
+  padding-top: 100px;
+}
+table{
+  width: 100%;
+  border-collapse: collapse;
+}
+.cart-info{
+  display: flex;
+  flex-wrap: wrap;
+}
+th{
+  text-align: left;
+  padding: 5px;
   color: #fff;
-  font-size: 30px;
-  font-weight: 600;
+  background: #476eac;
+  font-weight: normal;
+}
+td{
+  padding: 10px 5px;
+}
+td input{
+  width: 40px;
+  height: 30px;
+  padding: 5px;
+}
+td a{
+  color: #476eac;
+  font-size: 12px;
+}
+td img{
+  width: 80px;
+  height:80px;
+  margin-right: 10px;
+}
+.total-price{
+  display: flex;
+  justify-content: flex-end;
+}
+.total-price table{
+  border-top: 3px solid #476eac;
+  width: 100%;
+  max-width: 350px;
+}
+td:last-child{
+  text-align: right;
+}
+th:last-child{
+  text-align: right;
 }
