--- a/rstyle.css
+++ b/rstyle.css
@@ -22,7 +22,7 @@
   height: 3px;
   width: 30px;
   border-radius: 5px;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  background: #577fbe;
 }
 .rcontent form .user-details{
   display: flex;
@@ -53,37 +53,11 @@ form .input-box span.details{
 }
 .user-details .input-box input:focus,
 .user-details .input-box input:valid{
-  border-color: #9b59b6;
+  border-color: #577fbe;
 }
  form .credit-details .credit-title{
   font-size: 20px;
   font-weight: 500;
- }
- form .category{
-   display: flex;
-   width: 80%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
- form .category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .category label .dot{
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  margin-right: 10px;
-  background: #d9d9d9;
-  border: 5px solid transparent;
-  transition: all 0.3s ease;
-}
- #dot-1:checked ~ .category label .one,
- #dot-2:checked ~ .category label .two,
- #dot-3:checked ~ .category label .three{
-   background: #9b59b6;
-   border-color: #d9d9d9;
  }
  form input[type="radio"]{
    display: none;
@@ -103,7 +77,7 @@ form .input-box span.details{
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+   background: #577fbe;
  }
  form .rbutton input:hover{
   /* transform: scale(0.99); */
@@ -117,19 +91,11 @@ form .user-details .input-box{
     margin-bottom: 15px;
     width: 100%;
   }
-  form .category{
-    width: 100%;
-  }
   .rcontent form .user-details{
     max-height: 300px;
     overflow-y: scroll;
   }
   .user-details::-webkit-scrollbar{
     width: 5px;
-  }
-  }
-  @media(max-width: 459px){
-  .rcontainer .content .category{
-    flex-direction: column;
   }
 }
